# Group_2

./: .gitignore  CMakeLists.txt  MORSE.md  README.md  force.c  main.c  output.c  utilities.c
Energies/: argon_108_1.xyz
Examples/: argon_108.xyz  callgrind.out.15042  callgrind.out.16338  callgrind.out.38043  non_opt
Gtests/: test_force.cpp  test_utilities.cpp  test_verlet.cpp
benchmark_mpi/: plot.plt
benchmark_openmp/: plot.plt
benchmark_opt/: plot.plt
examples/: argon_108.xyz
include/: .utilities.c.swp  allocation.c  cleanup.c  force.c  input.c  ljmd.h  output.c  utilities.c  verlet.c
serial_code/: CMakeLists.txt
serial_code/Examples/: argon_108.xyz
serial_code/Gtests/: CMakeLists.txt  test_force.cpp  test_utilities.cpp  test_verlet.cpp
serial_code/include/: allocation.c  cleanup.c  force.c  ljmd.h  output.c  utilities.c
serial_code/src/: main.c
src/: comp.h  force.c  ljmd.h  main.c
tests/: test_force.cpp  test_utilities.cpp  test_verlet.cpp
